--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,59 @@
-__pycache__
+# Python虚拟环境
 .venv
-cache
-plugins
+venv/
+env/
+
+# 缓存目录
+cache/
+
+# 插件目录
+plugins/
+
+# Python编译文件
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+
+# 操作系统文件
+.DS_Store
+Thumbs.db
+
+# IDE配置
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# 日志文件
+*.log
+
+# 环境变量文件
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# 临时文件
+*.tmp
+*.temp
+
+# 打包文件
+*.zip
+*.tar.gz
+*.tar.bz2
+
+# 测试覆盖率
+.coverage
+coverage.xml
+
+# 其他
+*.egg-info/
+build/
+dist/
+
+# WebUI临时文件
+webui/static/cache/
+
+node_modules
