feat(webui): 添加登录认证功能

--- a/webui/static/ts/tsconfig.json
+++ b/webui/static/ts/tsconfig.json
@@ -7,7 +7,8 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "outDir": "../js",
-    "sourceMap": true
+    "sourceMap": true,
+    "lib": ["ES2017", "DOM"]
   },
   "include": [
     "*.ts"
