--- a/config.json
+++ b/config.json
@@ -3,5 +3,10 @@
         "host": "127.0.0.1",
         "http_port": 3000,
         "ws_port": 3001
+    },
+    "webui":{
+        "host": "127.0.0.1",
+        "port": 8080,
+        "password": "admin"
     }
 }
