feat: 新增多项功能和改进
- 添加 OpenAI 集成，支持聊天补全 API
- 实现 CacheManager 以进行文件缓存
- 增强插件系统，提供更好的错误处理和命令触发器
- 改进内存使用显示，增加项目特定指标
- 添加新字体并改进 HTML 到图像的转换
- 扩展用户和群组功能，增加额外属性
- 更新构建脚本以处理多个插件
- 添加日志记录功能和使用情况跟踪
- 各种错误修复和代码改进

--- a/config.json
+++ b/config.json
@@ -4,10 +4,20 @@
         "http_port": 3000,
         "ws_port": 3001
     },
-    "webui":{
+    "webui": {
         "host": "127.0.0.1",
         "port": 8080,
         "password": "admin"
     },
-    "info_cache_time": 60000
+    "info_cache_time": 60000,
+    "openai": {
+        "api_key": "sk-",
+        "api_base": "http://127.0.0.1:3902/v1",
+        "model": "gpt-3.5-turbo"
+    },
+    "prefixes": [
+        "/",
+        ".",
+        "-"
+    ]
 }
