feat: 跨代码库添加多项增强和修复
- 添加用于运行机器人的新批处理文件
- 扩展配置中的命令前缀列表
- 使用新模式更新gitignore
- 添加具有基本功能的示例插件
- 增加API超时时间并改进错误处理
- 通过缓存和字符串表示增强消息处理
- 改进用户和群组类功能
- 重构OpenAI模块，增加更好的日志记录和重试逻辑
- 更新插件管理器，改进前缀匹配
- 在send_message中添加消息历史跟踪
- 改进HTML到图像的转换，增强错误处理
- 添加URL到图像的转换功能

--- a/.gitignore
+++ b/.gitignore
@@ -63,6 +63,9 @@ docs/
 .mypy_cache
 data/
 plugins_src/
+plugins_src_disabled/
+*.plugin
+*.plugin.disabled
 logs/
 amia_data/
 cover_amia_data.py
@@ -72,3 +75,6 @@ test.txt
 netease/
 bilibili/
 debug.lyric.json
+async_github/
+pjsk_sticker/
+AmiaOld/
