feat: 添加群聊错误日志记录并改进缓存处理
refactor(cache_manager): 简化缓存管理并添加TTL支持
feat(recv_message): 添加昵称字段并改进消息格式化
refactor(sync): 添加线程执行的包装函数
style(config): 重新格式化前缀数组以提高可读性
fix(build_plugin): 使用目录的绝对路径
perf(html): 移除冗余的缓存检查和错误处理
feat(plugin_manager): 为插件触发器添加详细日志
feat(main): 实现群聊错误日志处理程序

--- a/config.json
+++ b/config.json
@@ -15,24 +15,25 @@
         "api_base": "http://127.0.0.1:3902/v1",
         "model": "gpt-3.5-turbo"
     },
+    "log_group": 0,
     "prefixes": [
-"/",
-",",
-"，",
-".",
-"。",
-":",
-"：",
-";",
-"；",
-"!",
-"！",
-"?",
-"？",
-"#",
-"~",
-"*",
-"%",
-"-"
+        "/",
+        ",",
+        "，",
+        ".",
+        "。",
+        ":",
+        "：",
+        ";",
+        "；",
+        "!",
+        "！",
+        "?",
+        "？",
+        "#",
+        "~",
+        "*",
+        "%",
+        "-"
     ]
 }
