feat: 添加新的实用函数并改进现有功能
refactor: 重新组织代码结构并更新导入

fix: 纠正文件操作中的编码处理

perf: 优化缓存管理和清理

style: 更新字符串格式化和注释

docs: 改进代码文档和注释

test: 为实用函数添加新的测试用例

chore: 更新依赖项和配置文件

--- a/config.json
+++ b/config.json
@@ -1,21 +1,23 @@
 {
+    "qq": 0,
     "onebot": {
         "host": "127.0.0.1",
         "http_port": 3000,
-        "ws_port": 3001
+        "ws_port": 3001,
+        "token": ""
     },
     "webui": {
-        "host": "127.0.0.1",
-        "port": 8080,
+        "host": "0.0.0.0",
+        "port": 6002,
         "password": "admin"
     },
     "info_cache_time": 60000,
     "openai": {
-        "api_key": "sk-",
-        "api_base": "http://127.0.0.1:3902/v1",
-        "model": "gpt-3.5-turbo"
+        "api_key": "",
+        "api_base": "https://generativelanguage.googleapis.com/v1beta/openai",
+        "model": "gemini-2.0-flash"
     },
-    "log_group": 0,
+    "log_group": 492453181,
     "prefixes": [
         "/",
         ",",
